# hdfmat

./: .gitignore  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: 00-globals.r  crossprod_ooc.r  hdfmat-package.r  hdfmat.r
man/: cpumat-class.Rd  crossprod_ooc.Rd  hdfmat-class.Rd  hdfmat-package.Rd  hdfmat.Rd  hdfmat_open.Rd
src/: Makevars.in  Makevars.win  crossprod.cpp  eigen.cpp  extptr.h  fill_diag.cpp  fillers.cpp  hdfmat.h  hdfmat_native.c  init.cpp  io.cpp  lanczos.hh  omp.h  scale.cpp  set_diag.cpp  svd.cpp  types.h
tests/: crossprod.r  eigen.r  fill_diag.r  fill_linspace.r  fill_val.r  float.r  inherit.r  io.r  scale.r  set_diag.r  tcrossprod.r
tools/: ax_lib_hdf5.m4
